<resources>
    <string name="app_name">PAM1 - Layout</string>
    <string name="destino">Destino</string>
    <string name="chegada">Data de chegada</string>
    <string name="saida">Data de saida</string>
    <string name="selecione">Selecione</string>
    <string name="orcamento">Orçamento</string>
    <string name="pessoas">N° de pessoas</string>
    <string name="salvar">Salvar</string>
</resources>
